Add support for db querying and creating user

--- a/FirstProject/nodetest1/public/index.html
+++ b/FirstProject/nodetest1/public/index.html
@@ -14,9 +14,10 @@
 <script src="libs/angular-route/angular-route.min.js"></script>
 
 <!-- Angular Custom -->
+<script src="js/services/userservice.js"></script>
 <script src="js/controllers/mainctrl.js"></script>
 <script src="js/controllers/userctrl.js"></script>
-<script src="js/services/userservice.js"></script>
+<script src="js/controllers/authctrl.js"></script>
 <script src="js/appRoutes.js"></script>
 <script src="js/app.js"></script>
 
