ADD Tempory post and users page
Post and user page are currently being used
to model API calls and views

--- a/FirstProject/nodetest1/public/index.html
+++ b/FirstProject/nodetest1/public/index.html
@@ -18,6 +18,7 @@
 <script src="js/controllers/mainctrl.js"></script>
 <script src="js/controllers/userctrl.js"></script>
 <script src="js/controllers/authctrl.js"></script>
+<script src="js/controllers/postctrl.js"></script>
 <script src="js/appRoutes.js"></script>
 <script src="js/app.js"></script>
 
@@ -32,7 +33,7 @@
 
 		<!-- angular dynamic content -->
 		<div class="container">
-			<div ng-view></div>
+			<div class="row" ng-view></div>
 		</div> 
 	</div>
 	
