--- a/FirstProject/nodetest1/public/index.html
+++ b/FirstProject/nodetest1/public/index.html
@@ -12,30 +12,33 @@
 <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="libs/angular/angular.min.js"></script>
 <script src="libs/angular-route/angular-route.min.js"></script>
+<script src="libs/angular-ui-router/release/angular-ui-router.min.js"></script>
 
 <!-- Angular Custom -->
-<script src="js/services/userservice.js"></script>
+<script src="js/services/authservice.js"></script>
+<script src="js/services/postservice.js"></script>
 <script src="js/controllers/mainctrl.js"></script>
 <script src="js/controllers/userctrl.js"></script>
 <script src="js/controllers/authctrl.js"></script>
 <script src="js/controllers/postctrl.js"></script>
+<script src="js/controllers/postcontentctrl.js"></script>
 <script src="js/appRoutes.js"></script>
 <script src="js/app.js"></script>
 
 </head>
 
-<body ng-app="myApp">
-	<div class= "container-fluid">
+<body ng-app="myApp" style="overflow:hidden">
+	
 		<!-- ./navbar -->
-		<div class="header">
+		<div class="header" style="padding-left:1%; padding-right:1%">
 			<div ng-include="'views/nav.html'"></div>
 		</div> 
 
 		<!-- angular dynamic content -->
-		<div class="container">
-			<div class="row" ng-view></div>
-		</div> 
-	</div>
+		
+		 <div ui-view></div>
+		
+
 	
 
 </body>
