Add session interceptor
Session intercept will now append token
to the requests.

In a request error, if a 401 or 403 is
received, redirect the user to the homepage

--- a/FirstProject/nodetest1/public/index.html
+++ b/FirstProject/nodetest1/public/index.html
@@ -17,7 +17,9 @@
 <!-- Angular Custom -->
 <script src="js/services/authservice.js"></script>
 <script src="js/services/postservice.js"></script>
+<script src="js/services/sessionintercept.js"></script>
 <script src="js/controllers/mainctrl.js"></script>
+<script src="js/controllers/navctrl.js"></script>
 <script src="js/controllers/userctrl.js"></script>
 <script src="js/controllers/authctrl.js"></script>
 <script src="js/controllers/postctrl.js"></script>
