--- a/FirstProject/nodetest1/public/index.html
+++ b/FirstProject/nodetest1/public/index.html
@@ -32,13 +32,16 @@
 <body ng-app="myApp" style="overflow:hidden">
 	
 		<!-- ./navbar -->
-		<div class="header" style="padding-left:1%; padding-right:1%">
+		<div class="header">
 			<div ng-include="'views/nav.html'"></div>
 		</div> 
 
+
 		<!-- angular dynamic content -->
 		
-		 <div ui-view style="height:100%"></div>
+		 <div ui-view style="height:100%;"></div>
+
+		
 		
 
 	
