ADD css redesign for login/register page

--- a/FirstProject/nodetest1/public/index.html
+++ b/FirstProject/nodetest1/public/index.html
@@ -6,6 +6,7 @@
 <!-- CSS -->
 <link href="libs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="css/main.css" rel="stylesheet">
+<link href="css/login.css" rel="stylesheet">
 
 <!-- JS -->
 <script src="libs/jquery/dist/jquery.min.js"></script>
