ADD redesigned homescreen

--- a/FirstProject/nodetest1/public/index.html
+++ b/FirstProject/nodetest1/public/index.html
@@ -7,6 +7,10 @@
 <link href="libs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="css/main.css" rel="stylesheet">
 <link href="css/login.css" rel="stylesheet">
+<link href="css/home.css" rel="stylesheet">
+
+<!-- Fonts -->
+<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 
 <!-- JS -->
 <script src="libs/jquery/dist/jquery.min.js"></script>
