--- a/FirstProject/nodetest1/public/index.html
+++ b/FirstProject/nodetest1/public/index.html
@@ -9,6 +9,7 @@
 <link href="css/login.css" rel="stylesheet">
 <link href="css/home.css" rel="stylesheet">
 <link href="css/colors.css" rel="stylesheet">
+<link href="css/post.css" rel="stylesheet">
 
 <!-- Fonts -->
 <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
