--- a/FirstProject/nodetest1/public/index.html
+++ b/FirstProject/nodetest1/public/index.html
@@ -31,6 +31,7 @@
 <script src="js/controllers/authctrl.js"></script>
 <script src="js/controllers/postctrl.js"></script>
 <script src="js/controllers/postcontentctrl.js"></script>
+<script src="js/filters/strlimitfilter.js"></script>
 <script src="js/appRoutes.js"></script>
 <script src="js/app.js"></script>
 
